added additional projects, links to hosted projects, additional styling and personal information to portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,3 +42,12 @@ body {
 .proj-details {
   background-color: #03a5ad;
 }
+
+.jasa-headshot {
+  max-height: 230px;
+  width: 250px;
+}
+
+.image-container {
+  width: 30px;
+}
